--- a/package.json
+++ b/package.json
@@ -30,22 +30,22 @@
     "url": "https://github.com/SimpliField/sf-filecache/issues"
   },
   "devDependencies": {
-    "coveralls": "~2.11.4",
-    "eslint": "^1.3.1",
-    "eslint-config-simplifield": "^1.0.3",
-    "istanbul": "~0.3.19",
+    "coveralls": "^2.11.4",
+    "eslint": "^1.5.0",
+    "eslint-config-simplifield": "^1.1.0",
+    "istanbul": "^0.3.20",
     "jsdoc-to-markdown": "^1.1.1",
-    "mocha": "~2.3.0",
-    "mocha-lcov-reporter": "0.0.2",
+    "mocha": "^2.3.3",
+    "mocha-lcov-reporter": "^0.0.2",
     "mockery": "^1.4.0",
-    "sf-time-mock": "^1.0.1",
+    "sf-time-mock": "^1.0.2",
     "streamtest": "^1.2.1"
   },
   "dependencies": {
     "debug": "^2.2.0",
-    "first-chunk-stream": "git+ssh://git@github.com:nfroidure/first-chunk-stream",
+    "first-chunk-stream": "^2.0.0",
     "mkdirp": "^0.5.1",
-    "sanitize-filename": "^1.4.2",
+    "sanitize-filename": "^1.4.3",
     "yerror": "^1.0.1"
   }
 }
