Move check before npm version

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha src/*.mocha.js",
     "lint": "eslint src/*.js",
-    "prepublish": "npm test && npm run lint",
+    "preversion": "npm test && npm run lint",
     "coveralls": "istanbul cover _mocha --report lcovonly -- src/*.mocha.js -R spec -t 5000 && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage",
     "cover": "istanbul cover --report html _mocha -- src/*.mocha.js -R spec -t 5000",
     "cli": "env NPM_RUN_CLI=1"
