--- a/package.json
+++ b/package.json
@@ -2,17 +2,50 @@
   "name": "sf-filecache",
   "version": "1.0.3",
   "description": "Simple and smart FS based cache system.",
-  "main": "src/index.js",
+  "main": "dist/index.js",
+  "metapak": {
+    "data": {
+      "files": "src/*.js",
+      "testsFiles": "src/*.mocha.js",
+      "ignore": [
+        "dist"
+      ],
+      "bundleFiles": [
+        "dist/**/*.js"
+      ]
+    },
+    "configs": [
+      "main",
+      "readme",
+      "eslint",
+      "babel",
+      "mocha",
+      "travis",
+      "codeclimate",
+      "jsdocs",
+      "jsarch"
+    ]
+  },
   "scripts": {
-    "test": "mocha src/*.mocha.js",
+    "architecture": "jsarch src/*.js > ARCHITECTURE.md && git add ARCHITECTURE.md",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
+    "cli": "env NODE_ENV=${NODE_ENV:-cli}",
+    "compile": "babel src --out-dir=dist",
+    "cover": "nyc npm test && nyc report --reporter=html --reporter=text",
+    "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls && rm -rf ./coverage",
+    "cz": "env NODE_ENV=${NODE_ENV:-cli} git cz",
+    "doc": "echo \"# API\" > API.md; jsdoc2md src/*.js >> API.md && git add API.md",
     "lint": "eslint src/*.js",
-    "preversion": "npm test",
-    "coveralls": "istanbul cover _mocha --report lcovonly -- src/*.mocha.js -R spec -t 5000 && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage",
-    "cover": "istanbul cover --report html _mocha -- src/*.mocha.js -R spec -t 5000",
-    "cli": "env NPM_RUN_CLI=1"
+    "metapak": "metapak",
+    "mocha": "mocha --require '@babel/register' src/*.mocha.js",
+    "precz": "npm run doc && npm run architecture && npm t && npm run lint && npm run metapak -- -s",
+    "prettier": "prettier --write src/*.js",
+    "preversion": "npm run lint && npm run compile && npm t && npm run doc && npm run architecture && npm run metapak -- -s",
+    "test": "npm run mocha",
+    "version": "npm run changelog && git add CHANGELOG.md"
   },
   "engines": {
-    "node": ">= 6"
+    "node": ">=8.12.0"
   },
   "repository": {
     "type": "git",
@@ -24,28 +57,115 @@
     "file",
     "service"
   ],
-  "author": "Nicolas Froidure (Simplifield)",
+  "author": {
+    "name": "Nicolas Froidure",
+    "email": "nicolas.froidure@insertafter.com",
+    "url": "http://insertafter.com/en/index.html"
+  },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/SimpliField/sf-filecache/issues"
   },
   "devDependencies": {
+    "@babel/cli": "^7.1.5",
+    "@babel/core": "^7.1.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/register": "^7.0.0",
+    "babel-eslint": "^10.0.1",
+    "babel-plugin-knifecycle": "^1.0.0",
+    "commitizen": "^3.0.4",
+    "common-services": "^3.0.1",
+    "conventional-changelog-cli": "^2.0.11",
     "coveralls": "^3.0.2",
-    "eslint": "^5.10.0",
-    "eslint-config-simplifield": "^8.1.0",
-    "istanbul": "^0.4.5",
+    "cz-conventional-changelog": "^2.1.0",
+    "eslint": "^5.9.0",
+    "eslint-plugin-prettier": "^3.0.0",
+    "jsarch": "^1.3.0",
     "jsdoc-to-markdown": "^4.0.1",
+    "metapak": "^2.0.0",
+    "metapak-nfroidure": "^9.0.3",
     "mocha": "^5.2.0",
-    "mocha-lcov-reporter": "^1.3.0",
-    "mockery": "^2.1.0",
+    "nyc": "^13.0.1",
+    "prettier": "^1.14.3",
     "sf-time-mock": "^1.0.2",
+    "sinon": "^7.2.2",
     "streamtest": "^1.2.4"
   },
   "dependencies": {
-    "debug": "^4.1.0",
     "first-chunk-stream": "^2.0.0",
-    "mkdirp": "^0.5.1",
+    "knifecycle": "^5.0.2",
     "sanitize-filename": "^1.6.1",
     "yerror": "^2.1.3"
+  },
+  "greenkeeper": {
+    "ignore": [
+      "commitizen",
+      "cz-conventional-changelog",
+      "conventional-changelog-cli",
+      "eslint",
+      "eslint-config-prettier",
+      "prettier",
+      "mocha",
+      "coveralls",
+      "nyc",
+      "jsdoc-to-markdown",
+      "jsarch"
+    ]
+  },
+  "eslintConfig": {
+    "extends": "eslint:recommended",
+    "parserOptions": {
+      "ecmaVersion": 2018,
+      "sourceType": "module",
+      "modules": true
+    },
+    "env": {
+      "es6": true,
+      "node": true,
+      "jest": true,
+      "mocha": true
+    },
+    "plugins": [
+      "prettier"
+    ],
+    "rules": {
+      "prettier/prettier": "error"
+    }
+  },
+  "prettier": {
+    "semi": true,
+    "printWidth": 80,
+    "singleQuote": true,
+    "trailingComma": "all",
+    "proseWrap": "always"
+  },
+  "babel": {
+    "presets": [
+      [
+        "@babel/env",
+        {
+          "targets": {
+            "node": "8.12.0"
+          }
+        }
+      ]
+    ],
+    "plugins": [
+      "@babel/plugin-proposal-object-rest-spread",
+      "babel-plugin-knifecycle"
+    ]
+  },
+  "contributors": [],
+  "files": [
+    "dist/**/*.js",
+    "LICENSE",
+    "README.md",
+    "CHANGELOG.md"
+  ],
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
